src/styles/userForm.css
.form-sub-section {
     display: flex;
}

.form-sub-title {
     font-weight: bold;
     color: #808080;
     font-size: 14px;
     margin-bottom: 8px;
}

.form-field-group {
     display: grid;
     gap: 12px;
     grid-template-columns: auto auto;
}

.form-field-group>input {
     min-width: 285px;
     padding: 10px 15px !important;
     font-size: 13px;
     border-radius: 6px;
     border: 2px solid rgba(128, 128, 128, 0.2);
     transition: 200ms;
}

*::placeholder {
     font-size: 13px !important;
     letter-spacing: 0.4px;
     color: #808080 !important;
}

input:focus,
textarea:focus {
     outline: 0;
     border: 2px solid #475585;
}

/* remove the number controller in type='number' */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
     -webkit-appearance: none;
}

.note {
     font-size: 12px;
     font-style: italic;
     color: #808080;
     margin-top: -6px;
}

textarea {
     resize: none !important;
     border-radius: 6px;
     padding: 10px 15px !important;
     border: 2px solid rgba(128, 128, 128, 0.2);
     font-size: 13px !important;
     transition: 200ms;
}

button {
     padding: 8px 35px !important;
     border-radius: 6px;
     letter-spacing: 0.6px;
     font-size: 14px !important;
}

